Feat: Add Auth JWT Documentation Swagger
